# lsfml

./: .gitignore  LICENSE  README.md
envs/: environment.yml  pyproject.toml
lsfml/: README.md  utils.py
lsfml/clustering/: cluster.py
lsfml/clustering/cluster_analysis/clusters_cosine/: cluster_0.csv  cluster_1.csv  cluster_2.csv  cluster_3.csv  cluster_4.csv  cluster_5.csv  cluster_6.csv  cluster_7.csv
lsfml/clustering/cluster_analysis/filtered_list/: filtered_list.csv
lsfml/config/: config_141.ini  config_142.ini  config_323.ini
lsfml/data/: 20230324_internal_safe_to_publish_2.csv  ML_Subset_Regioselectivity_Borylation_Lit_Rxn_Dataset.csv  ML_Subset_Regioselectivity_Borylation_Lit_Rxn_Dataset_Allsets.csv  drugs_data.tsv  drugs_data.xlsx  experimental_rxndata.csv  literature_regio.csv  literature_rxndata.csv  roche_hte_regio_data.csv  surf_template.tsv
lsfml/envs/: environment.yml  pyproject.toml  test_pyg.py  xtbenv.yml
lsfml/experimental/: net.py  net_utils.py  preprocessh5.py  property_analysis.py  train.py
lsfml/fganalysis/: ertl.py  fg_analysis.py
lsfml/literature/regioselectivity/: graph_mapping.py  net.py  net_utils.py  production.py  train.py
lsfml/literature/rxnyield/: net.py  net_utils.py  preprocessh5.py  train.py
lsfml/minisci/: acid_analysis.py  preprocess20.py  preprocessh5.py  preprocessxtb.py  screening_analysis.py  substrate_analysis.py
lsfml/minisci/gml/: analyze.py  analyze_bin.py  analyze_latent.py  analyze_learn.py  analyzestd.py  jobscript.sh  net.py  net_latent.py  net_utils.py  polish_clusters.py  production.py  production_cv.py  train.py  train_production.py
lsfml/minisci/screening_data/: Acids.smi  Substrates.smi
lsfml/modules/: gmt.py  gnn_blocks.py  pygdataset.py
lsfml/publication/: LICENSE  README.md  environment.yml  utils.py
lsfml/publication/clustering/: cluster.py
lsfml/publication/experimental/: net.py  net_utils.py  preprocessh5.py  train.py
lsfml/publication/fganalysis/: fg_analysis.py
lsfml/publication/modules/: gnn_blocks.py
lsfml/publication/qml/: config_14000.ini  prod.py  qml_net.py  test.py
lsfml/qml/: prod.py  qml_net.py  test.py
(+40 files in other folders)
