[tool.poetry]
name = "mlpp7a"
version = "0.0.1"
description = "Roche wrapper for PyTorch Geometric"
authors = ["Michael Reutlinger <michael.reutlinger@roche.com>, Kenneth Atz <kenneth.atz@roche.com>"]
license = "Proprietary"
packages = [{ include = "mlpp" }, { include = "api" }]

[tool.poetry.scripts]
mlpp = 'mlpp.scripts.entry:cli'

[tool.poetry.dependencies]
# pip packages
python = "~3.8"
click = "~8"
"ruamel.yaml" = "~0.16"
pyarrow = "~3.0"
tqdm = "~4"
h5py = "~3.7"
hyperopt = { extras = ["ATPE"], version = "^0.2.7" }
lightgbm = "~3.1"
pyopenssl = "20.0.0"  # newer versions give errors with mlops sdk
email-validator = "^1.3.1"  # needed for mlops sdk
pandas = "^1.3"  # version lock for mlops sdk
rdkit = "^2022.9"
# Roche packages
standardiser = { git = "https://code.roche.com/cadd/flatkinson-standardiser.git", rev = "master" }
roche-pred-mlops-sdk-inference-custom-python = { source = "roche-pred-mlops-sdk", version = "1.0.0" }
roche-pred-mlops-sdk-storage-tools = { source = "roche-pred-mlops-sdk", version = "0.1.4" }

[tool.poetry.dev-dependencies]
# notebooks
ipykernel = "^5.5"
ipython_genutils = "^0.2"
matplotlib = "~3.4"
# testing
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
# formatting, linting, etc
black = "^22.6.0"
flake8 = "^4.0.1"
pydocstyle = "^6.1.1"
isort = "^5.10.1"
yamllint = "^1.27.1"
pre-commit = "*"

[[tool.poetry.source]]
name = "roche-pred-mlops-sdk"
url = "https://code.roche.com/api/v4/projects/88192/packages/pypi/simple/"
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

###############
# Other tools #
###############

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
log_cli_level = "DEBUG"
log_format = "%(asctime)s,%(msecs)d %(levelname)-8s [%(filename)s:%(lineno)d] %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.black]
line-length = 99
target-version = ['py38']

[tool.isort]
profile = "black"
